--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -49,10 +49,10 @@
   --vp-c-default-3: var(--vp-c-gray-3);
   --vp-c-default-soft: var(--vp-c-gray-soft);
 
-  --vp-c-brand-1: var(--vp-c-blue-1);
-  --vp-c-brand-2: var(--vp-c-blue-2);
-  --vp-c-brand-3: var(--vp-c-blue-3);
-  --vp-c-brand-soft: var(--vp-c-indigo-soft);
+  --vp-c-brand-1: var(--vp-c-#0000ff-1);
+  --vp-c-brand-2: var(--vp-c-#0000ff-2);
+  --vp-c-brand-3: var(--vp-c-#0000ff-3);
+  --vp-c-brand-soft: var(--vp-c-#0000ff-soft);
 
   --vp-c-tip-1: var(#5c8ca4);
   --vp-c-tip-2: var(#5c8ca4);
