--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -105,7 +105,7 @@
 
   --vp-home-hero-image-background-image: linear-gradient(
     -45deg,
-    #af2aec 50%,
+    #0000ff 50%,
     #25b0e7 50%
   );
   --vp-home-hero-image-filter: blur(44px);
