--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -106,7 +106,7 @@
   --vp-home-hero-image-background-image: linear-gradient(
     -45deg,
     #0000ff 50%,
-    #25b0e7 50%
+    #280c4d 50%
   );
   --vp-home-hero-image-filter: blur(44px);
 }
